[build-system]
requires = ["setuptools>=45", "wheel", "numpy>=1.20.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pystards"
dynamic = ["version"]
description = "STARDS (Simple Tensors Arrays and Rasters Data Store) for persistent N-dimensional arrays"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "USGS Astrogeology", email = "astroweb@usgs.gov"}
]
keywords = ["storage", "arrays", "columnar", "hdf5-alternative", "numpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]

[project.urls]
Homepage = "https://code.usgs.gov/astrogeology/stards"
Documentation = "https://code.usgs.gov/astrogeology/stards/-/blob/main/README.md"
Repository = "https://code.usgs.gov/astrogeology/stards"
Issues = "https://code.usgs.gov/astrogeology/stards/-/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["pystards"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
